--- a/index.html
+++ b/index.html
@@ -882,7 +882,7 @@
     backdrop-filter: blur(18px) saturate(1.5);
     -webkit-backdrop-filter: blur(18px) saturate(1.5);
     box-shadow: 0 18px 40px rgba(15, 23, 42, 0.45);
-    max-height: min(420px, 65vh); /* more than 6-10 messages, scroll inside section only */
+    max-height: min(360px, 55vh); /* compact scrollable list: لا نخلي الصفحة طويلة ونخلي السكشن نفسه هو الي يعمل scroll */
     overflow-y: auto;
     scroll-behavior: smooth;
     -webkit-overflow-scrolling: touch;
